# capstone-project-team-8

./: .dockerignore  .gitignore  Dockerfile  README.md  TDD_STATUS.md  docker-compose.yml  init.sql  package-lock.json
src/backend/: .env.example  .gitignore  Dockerfile  README.md  check_db.py  pyproject.toml  pytest.ini  requirements.txt
src/backend/app/: analyzers.py  models.py  serializers.py  tests.py  urls.py  views.py
src/backend/app/migrations/: 0001_initial.py  0002_programminglanguage_user_bio_user_first_name_and_more.py  0003_alter_project_created_at_alter_project_updated_at.py  0003_user_github_email.py  0004_project_ai_summary_project_ai_summary_generated_at_and_more.py  0006_alter_project_updated_at.py  (+28 more)
src/backend/src/: settings.py  test_settings.py  urls.py
src/backend/terminal/: __init__.py  __main__.py  client.py  utils.py
src/backend/tests/: __init__.py  test_api_documentation.py  test_chronological_ordering.py  test_chronological_skills.py  test_confidence_calculator.py  test_content_reading.py  test_feature_extractor.py  test_file_analyzers.py  test_folder_upload_service.py  test_human_file_filter.py  test_image_upload.py  test_language_rubrics.py  test_latex_resume.py  test_portfolio_endpoints.py  test_privacy_consent.py  test_project_classifier.py  test_project_endpoints.py  test_project_metadata.py  test_prompt_loader.py  test_resume_skill_extractor.py  test_skills_endpoint.py  test_skills_timeline.py  test_upload_consent_and_ordering.py  test_upload_skips_files.py  test_user_role_inference.py  test_user_role_model.py  test_zip_timestamps.py
(+294 files in other folders)
